--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -37,7 +37,7 @@
   </head>
   <body>
     <header>
-      <h1>Contact Directory</h1>
+      <h1>Address Book</h1>
     </header>
 
     <main>{% block content %}My default content{% endblock %}</main>
