Index route displaying contacts properly

--- a/views/contacts/edit.liquid
+++ b/views/contacts/edit.liquid
@@ -8,15 +8,39 @@
           type="text"
           name="name"
           placeholder="enter contact name"
-          value="{{fruit.name}}"
+          value="{{contact.name}}"
         />
       </label>
       <label>
-        COLOR:<input
+        NUMBER:<input
           type="text"
-          name="color"
-          placeholder="enter fruit name"
+          name="number"
+          placeholder="enter contact number"
           value="{{contact.number}}"
+        />
+      </label>
+      <label>
+        EMAIL:<input
+          type="text"
+          name="email"
+          placeholder="enter contact email"
+          value="{{contact.email}}"
+        />
+      </label>
+      <label>
+        WEBPAGE:<input
+          type="text"
+          name="webpage"
+          placeholder="enter contact webpage"
+          value="{{contact.webpage}}"
+        />
+      </label>
+      <label>
+        ADDRESS:<input
+          type="text"
+          name="address"
+          placeholder="enter contact address"
+          value="{{contact.address}}"
         />
       </label>
     </fieldset>
