--- a/views/contacts/new.liquid
+++ b/views/contacts/new.liquid
@@ -9,6 +9,15 @@
       <label>
         NUMBER:<input type="text" name="number" placeholder="enter contact number" />
       </label>
+      <label>
+        EMAIL:<input type="text" name="email" placeholder="enter contact email" />
+      </label>
+      <label>
+        WEBPAGE:<input type="text" name="webpage" placeholder="enter contact webpage" />
+      </label>
+      <label>
+        ADDRESS:<input type="text" name="address" placeholder="enter contact address" />
+      </label>
     </fieldset>
     <input type="submit" value="create new contact" />
   </form>
