--- a/views/contacts/show.liquid
+++ b/views/contacts/show.liquid
@@ -1,10 +1,11 @@
 {% layout "layout.liquid" %} {% block content %}
       <div>
         <article>
-          <h2>
-            {{ contact.name }} -
-          </h2>
-          <h3>{{ contact.name }}</h3>
+          <h2>Name: {{ contact.name }} </h2>
+          <h3>Number: {{ contact.number }}</h3>
+          <h3>Email: {{contact.email}}</h3>
+          <h3>Webpage: {{contact.webpage}}</h3>
+          <h3>Address: {{contact.address}}</h3>
           <a href="/contacts/{{ contact._id }}/edit"><button>Edit</button></a>
           <form action="/contacts/{{ contact._id }}?_method=DELETE" method="POST">
             <input type="submit" value="Delete" />
