--- a/views/contacts/show.liquid
+++ b/views/contacts/show.liquid
@@ -1,5 +1,5 @@
 {% layout "layout.liquid" %} {% block content %}
-      <div>
+      <div class = "show">
         <article>
           <h2>Name: {{ contact.name }} </h2>
           <h3>Number: {{ contact.number }}</h3>
