--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -42,6 +42,6 @@
 
     <main>{% block content %}My default content{% endblock %}</main>
 
-    <footer></footer>
+    <footer>Designed by Bijan Saniee</footer>
   </body>
 </html>
