--- a/views/contacts/new.liquid
+++ b/views/contacts/new.liquid
@@ -1,5 +1,5 @@
 {% layout "layout.liquid" %} {% block content %}
-<div>
+<div class = "new">
   <form action="/contacts" method="post">
     <fieldset>
       <legend>Create a New Contact</legend>
